traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-console
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  type: NodePort
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - port: 8080
      name: webui
      nodePort: 30080
